# saucedemo-playwright-e2e

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
config/: environments.py  settings.py  test_users.py
flows/: checkout_flow.py  login_flow.py
locators/: cart_locators.py  checkout_locators.py  example_locators.py  inventory_locators.py  login_locators.py
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  example_page.py  inventory_page.py  login_page.py
tests/: conftest.py  test_cart.py  test_checkout.py  test_checkout_e2e_flow.py  test_example_page.py  test_login.py  test_login_negative.py  test_smoke.py
utils/: browser.py
